# ReactFastDemo

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  replit.nix
attached_assets/: Pasted--Python-Error-Attempting-analyze-resume-section-attempt-1-4-Error-Error-during-analysis-corout-1740080914838.txt  Pasted-9-06-35-PM-express-serving-on-port-5000-Created-resume-analyses-table-Created-resume-scores-table--1739394434685.txt  Pasted-Analysis-error-ApiError-Value-of-type-STRUCT-overview-STRING-strengths-ARRAY-STRING-weaknesses--1739394321811.txt  Pasted-Attempting-to-insert-row-id-1740142069859-fileName-CV-Gaurav-Tiwari-pdf-resumeUploadedAt--1740142285521.txt  Pasted-Error-in-updateAnalysis-ApiError-Could-not-serialize-access-to-table-resume-analysis-445422-gigfli-1740142602950.txt  Pasted-Python-Error-Error-Error-analyzing-section-Professional-Summary-Failed-to-parse-JSON-from-respons-1739295573795.txt  Pasted-Python-Error-Error-JSON-parsing-error-Expecting-delimiter-line-1-column-30-char-29-Respons-1739295993012.txt  Pasted-Successfully-verified-access-to-resume-scores-Error-in-createScore-ApiError-Table-544927996097-gig-1739395671792.txt  retrieval.py
backend/: .env  app.py  app_constants.py  config.py  requirements.txt
backend/models/: resume_analysis.py  section_improvement.py
backend/routes/: analyze.py  pdf.py  progress.py  results.py  upload.py
backend/services/: llm_service.py  pdf_service.py  (+1 more)
server/: db.ts  pdf_accessibility.py  report_service.py  resume_service.py  routes.ts  storage.ts
shared/: schema.ts
(+12 files in other folders)
