[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi-mail>=1.4.2",
    "google-generativeai>=0.8.4",
    "langchain-google-genai>=2.0.9",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "openai>=1.61.1",
    "pdfminer-six>=20240706",
    "pdfplumber>=0.5.3",
    "python-multipart>=0.0.20",
    "reportlab>=4.3.0",
    "six>=1.17.0",
    "tiktoken>=0.8.0",
]
