[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-cloud-bigquery>=3.29.0",
    "google-cloud-core>=2.4.1",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "openai>=1.61.1",
    "pdfminer-six>=20240706",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "tiktoken>=0.8.0",
]
